# prepforge

./: .gitignore  LICENSE  README.md  pyproject.toml
major_project/: cli.py  config.py  gui_app.py  streamlit_app.py  tui_app.py
major_project/core/: config_store.py  model.py  train.py  utils.py
