[project]
name = "mentorai"
version = "0.1.3"
description = "AI Exam Preparation System with TUI, GUI, and Streamlit"
authors = [
    { name = "Himanshu Arora" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "transformers",
    "peft",
    "rich",
    "prompt_toolkit"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = ["PyQt6"]
web = ["streamlit"]
train = ["datasets", "trl"]
gpu = ["torch"]
fast = ["unsloth"]

[project.scripts]
mentorai = "major_project.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["major_project*"]
